# serial-contract

./: Cargo.toml
resources/: rantai_suplai.contract  rantai_suplai.json
src/: main.rs
