[patch.crates-io]
ss58-registry = { git = "https://github.com/goro-network/ss58-registry", rev = "984cc02" }

[package]
name = "try_serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
parity-scale-codec = "3.5.0"
scale-info = "2.9.0"
subxt = "0.28.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.8", features = ["codec"] }
ss58-registry = { git = "https://github.com/goro-network/ss58-registry", rev = "984cc02", default-features = false }
contract-metadata = "3.0.1"
contract-transcode = "3.0.1"
anyhow = "1.0.72"
